c/pdfgen.h


struct pdf_doc;
struct pdf_object;
struct pdf_info {
    char creator[64];  
    char producer[64]; 
    char title[64];    
    char author[64];   
    char subject[64];  
    char date[64];     
};
enum {
    IMAGE_PNG,
    IMAGE_JPG,
    IMAGE_PPM,
    IMAGE_BMP,
    IMAGE_UNKNOWN
};
struct png_header {
    uint32_t width;    
    uint32_t height;   
    uint8_t bitDepth;  
    uint8_t colorType; 
    uint8_t deflate;   
    uint8_t filtering; 
    uint8_t interlace; 
};
struct bmp_header {
    uint32_t bfSize;        
    uint16_t bfReserved1;   
    uint16_t bfReserved2;   
    uint32_t bfOffBits;     
    uint32_t biSize;        
    int32_t biWidth;        
    int32_t biHeight;       
    uint16_t biPlanes;      
    uint16_t biBitCount;    
    uint32_t biCompression; 
};
struct jpeg_header {
    int ncolours; 
};
struct ppm_header {
    size_t size;           
    size_t data_begin_pos; 
    int color_space;       
};
struct pdf_img_info {
    int image_format; 
    uint32_t width;   
    uint32_t height;  
    union {
        struct bmp_header bmp;   
        struct jpeg_header jpeg; 
        struct png_header png;   
        struct ppm_header ppm;   
    };
};
struct pdf_path_operation {
    char op;  
    float x1; 
    float y1; 
    float x2; 
    float y2; 
    float x3; 
    float y3; 
};
struct pdf_doc *pdf_create(float width, float height,
                           const struct pdf_info *info);
void pdf_destroy(struct pdf_doc *pdf);
const char *pdf_get_err(const struct pdf_doc *pdf, int *errval);
void pdf_clear_err(struct pdf_doc *pdf);
int pdf_set_font(struct pdf_doc *pdf, const char *font);
int pdf_get_font_text_width(struct pdf_doc *pdf, const char *font_name,
                            const char *text, float size, float *text_width);
float pdf_height(const struct pdf_doc *pdf);
float pdf_width(const struct pdf_doc *pdf);
float pdf_page_height(const struct pdf_object *page);
float pdf_page_width(const struct pdf_object *page);
struct pdf_object *pdf_append_page(struct pdf_doc *pdf);
struct pdf_object *pdf_get_page(struct pdf_doc *pdf, int page_number);
int pdf_page_set_size(struct pdf_doc *pdf, struct pdf_object *page,
                      float width, float height);
int pdf_save(struct pdf_doc *pdf, const char *filename);
int pdf_save_file(struct pdf_doc *pdf, FILE *fp);
int pdf_add_text(struct pdf_doc *pdf, struct pdf_object *page,
                 const char *text, float size, float xoff, float yoff,
                 uint32_t colour);
int pdf_add_text_rotate(struct pdf_doc *pdf, struct pdf_object *page,
                        const char *text, float size, float xoff, float yoff,
                        float angle, uint32_t colour);
int pdf_add_text_wrap(struct pdf_doc *pdf, struct pdf_object *page,
                      const char *text, float size, float xoff, float yoff,
                      float angle, uint32_t colour, float wrap_width,
                      int align, float *height);
int pdf_add_line(struct pdf_doc *pdf, struct pdf_object *page, float x1,
                 float y1, float x2, float y2, float width, uint32_t colour);
int pdf_add_cubic_bezier(struct pdf_doc *pdf, struct pdf_object *page,
                         float x1, float y1, float x2, float y2, float xq1,
                         float yq1, float xq2, float yq2, float width,
                         uint32_t colour);
int pdf_add_quadratic_bezier(struct pdf_doc *pdf, struct pdf_object *page,
                             float x1, float y1, float x2, float y2,
                             float xq1, float yq1, float width,
                             uint32_t colour);
int pdf_add_custom_path(struct pdf_doc *pdf, struct pdf_object *page,
                        const struct pdf_path_operation *operations,
                        int operation_count, float stroke_width,
                        uint32_t stroke_colour, uint32_t fill_colour);
int pdf_add_ellipse(struct pdf_doc *pdf, struct pdf_object *page, float x,
                    float y, float xradius, float yradius, float width,
                    uint32_t colour, uint32_t fill_colour);
int pdf_add_circle(struct pdf_doc *pdf, struct pdf_object *page, float x,
                   float y, float radius, float width, uint32_t colour,
                   uint32_t fill_colour);
int pdf_add_rectangle(struct pdf_doc *pdf, struct pdf_object *page, float x,
                      float y, float width, float height, float border_width,
                      uint32_t colour);
int pdf_add_filled_rectangle(struct pdf_doc *pdf, struct pdf_object *page,
                             float x, float y, float width, float height,
                             float border_width, uint32_t colour_fill,
                             uint32_t colour_border);
int pdf_add_polygon(struct pdf_doc *pdf, struct pdf_object *page, float x[],
                    float y[], int count, float border_width,
                    uint32_t colour);
int pdf_add_filled_polygon(struct pdf_doc *pdf, struct pdf_object *page,
                           float x[], float y[], int count,
                           float border_width, uint32_t colour);
int pdf_add_bookmark(struct pdf_doc *pdf, struct pdf_object *page, int parent,
                     const char *name);
int pdf_add_link(struct pdf_doc *pdf, struct pdf_object *page, float x,
                 float y, float width, float height,
                 struct pdf_object *target_page, float target_x,
                 float target_y);
int pdf_add_barcode(struct pdf_doc *pdf, struct pdf_object *page, int code,
                    float x, float y, float width, float height,
                    const char *string, uint32_t colour);
int pdf_add_image_data(struct pdf_doc *pdf, struct pdf_object *page, float x,
                       float y, float display_width, float display_height,
                       const uint8_t *data, size_t len);
int pdf_add_rgb24(struct pdf_doc *pdf, struct pdf_object *page, float x,
                  float y, float display_width, float display_height,
                  const uint8_t *data, uint32_t width, uint32_t height);
int pdf_add_grayscale8(struct pdf_doc *pdf, struct pdf_object *page, float x,
                       float y, float display_width, float display_height,
                       const uint8_t *data, uint32_t width, uint32_t height);
int pdf_add_image_file(struct pdf_doc *pdf, struct pdf_object *page, float x,
                       float y, float display_width, float display_height,
                       const char *image_filename);
int pdf_parse_image_header(struct pdf_img_info *info, const uint8_t *data,
                           size_t length, char *err_msg,
                           size_t err_msg_length);